[gd_scene format=3 uid="uid://by7kpu0j8qq8"]

[ext_resource type="Script" uid="uid://dfdy35mpkqbab" path="res://entities/bulle/bulle_incident.gd" id="1_rswvj"]
[ext_resource type="FontFile" uid="uid://btaosis1u2l53" path="res://entities/bulle/absender1.ttf" id="2_hi8qx"]
[ext_resource type="PackedScene" uid="uid://d0b08xu72xnum" path="res://carton/3Dcardboards/bulle_main/bulle_main.tscn" id="3_edflg"]
[ext_resource type="PackedScene" uid="uid://cl7su7uskwgcj" path="res://carton/3Dcardboards/bulle_handle/bulle_handle.tscn" id="4_gqo5c"]
[ext_resource type="PackedScene" uid="uid://7hmyj02kii3d" path="res://entities/incidents/dialog/dialog_incident.tscn" id="5_dsgy4"]

[node name="bulleIncident" type="Node3D" unique_id=490625740 node_paths=PackedStringArray("bubble_marker")]
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, 0, 0, 0)
visible = false
script = ExtResource("1_rswvj")
bubble_marker = NodePath("")
padding = Vector2(0, 0)

[node name="goodletter" type="Label3D" parent="." unique_id=666058]
transform = Transform3D(-0.6413422, -0.0009500691, 5.9462355e-09, -0.0011193545, 0.54434896, 0, -5.606792e-08, -8.305768e-11, -0.068017006, 0, 0, -0.034724236)
shaded = true
modulate = Color(0, 1, 0, 0.65882355)
text = "Hello World
Billy Person"
font = ExtResource("2_hi8qx")
font_size = 128

[node name="wrongletter" type="Label3D" parent="." unique_id=630845759]
transform = Transform3D(-0.6413422, -0.0009500691, 5.9462355e-09, -0.0011193545, 0.54434896, 0, -5.606792e-08, -8.305768e-11, -0.068017006, 0, 0, -0.034724236)
shaded = true
modulate = Color(1, 0, 0, 1)
text = "Hello    LD
Silly Person"
font = ExtResource("2_hi8qx")
font_size = 128

[node name="waitedletter" type="Label3D" parent="." unique_id=1324460219]
transform = Transform3D(-0.6413422, -0.0009500691, 5.9462355e-09, -0.0011193545, 0.54434896, 0, -5.606792e-08, -8.305768e-11, -0.068017006, 0, 0, -0.034724236)
shaded = true
modulate = Color(1, 1, 1, 0.3019608)
text = "Hello    LD
Silly Person"
font = ExtResource("2_hi8qx")
font_size = 128

[node name="BulleMain" parent="." unique_id=1791090360 instance=ExtResource("3_edflg")]
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, -0.004686981, 0, 0.00037443638)

[node name="Node3D" type="Node3D" parent="BulleMain" unique_id=2016664448]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.32875082, -0.32090044, -0.102073535)

[node name="BulleHandle" parent="BulleMain/Node3D" unique_id=1391828836 instance=ExtResource("4_gqo5c")]
transform = Transform3D(0.11227442, -0.48706895, 0.012570208, 0.48723137, 0.1122349, -0.0029798206, 8.114054e-05, 0.012918315, 0.49983296, 0.7073785, 0, 0.07211208)

[node name="KingDialog" parent="." unique_id=1025400322 instance=ExtResource("5_dsgy4")]

[connection signal="resolved" from="KingDialog" to="." method="_on_dialog_incident_resolved"]
[connection signal="write_letter" from="KingDialog" to="." method="_on_dialog_incident_write_letter"]
